Bug 519122 - Can't screenshare my laptop's monitor unless an external display is plugged in
Summary: Can't screenshare my laptop's monitor unless an external display is plugged in
Status: RESOLVED FIXED
Alias: None
Product: xdg-desktop-portal-kde
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.6.80
Platform: Neon Linux
: NOR major
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-04-18 21:17 UTC by yamiyukisenpai
Modified: 2026-06-11 09:05 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description yamiyukisenpai 2026-04-18 21:17:32 UTC
SUMMARY
For some reason, Wayland won't let me share my laptop's monitor, and it only wants to share the full screen when I plug in an external monitor.  However, it seems to completely lose that ability the moment I unplug the external monitor, and I'm back to not being able to access it at all.

STEPS TO REPRODUCE
1. Connect to computer via RustDesk
2. Unplug the display
3. Disconnect and reconnect to RustDesk

OBSERVED RESULT
RustDesk won't reconnect.
It tries to ask what to share, but the laptop's display isn't shareable.

EXPECTED RESULT
The moment I tell it to "share everything" it should SHARE EVERYTHING regardless if the external monitor is plugged in, or whatever is plugged in.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 6.6.80
KDE Frameworks Version: 6.26.0
Qt Version: 6.10.2
Kernel Version: 6.17.0-20-generic (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-6200U CPU @ 2.30GHz
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: Intel® HD Graphics 520
Manufacturer: Dell Inc.
Product Name: Inspiron 5559

ADDITIONAL INFORMATION
I also set RustDesk's permission setting to "allow" for remote control, so it makes no sense as to why it keeps asking me when I want it to share EVERYTHING.

I don't mean to sound rude, but the illogical stuff just makes no sense and is frustrating, especially since Plasma will soon drop X11.  My current workaround is to share the screen on the dummy HDMI dongle.
Comment 1 Bug Janitor Service 2026-05-20 08:54:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/562
Comment 2 David Redondo 2026-06-10 11:40:45 UTC
Git commit daffa430ab241dc6287e001247ab42ad7ae11122 by David Redondo.
Committed on 10/06/2026 at 09:32.
Pushed by davidre into branch 'master'.

screencast: Always allow restoring full workspace

Long term we should move away from using the model that backs the UI
for restoration purposes.
FIXED-IN:6.6.6

M  +8    -6    src/screencast.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/commit/daffa430ab241dc6287e001247ab42ad7ae11122
Comment 3 David Redondo 2026-06-10 11:53:39 UTC
Git commit 71655df93ff92374955e40d0714492ff645ba6f2 by David Redondo.
Committed on 10/06/2026 at 11:45.
Pushed by davidre into branch 'Plasma/6.7'.

screencast: Always allow restoring full workspace

Long term we should move away from using the model that backs the UI
for restoration purposes.
FIXED-IN:6.6.6


(cherry picked from commit daffa430ab241dc6287e001247ab42ad7ae11122)

Co-authored-by: David Redondo <kde@david-redondo.de>

M  +8    -6    src/screencast.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/commit/71655df93ff92374955e40d0714492ff645ba6f2
Comment 4 David Redondo 2026-06-11 09:05:18 UTC
Git commit ae7b46aebe67522a512b1dac91632bc78740bb6b by David Redondo.
Committed on 11/06/2026 at 09:05.
Pushed by davidre into branch 'Plasma/6.6'.

screencast: Always allow restoring full workspace

Long term we should move away from using the model that backs the UI
for restoration purposes.
FIXED-IN:6.6.6


(cherry picked from commit daffa430ab241dc6287e001247ab42ad7ae11122)

Co-authored-by: David Redondo <kde@david-redondo.de>

(cherry picked from commit 71655df93ff92374955e40d0714492ff645ba6f2)

Co-authored-by: David Redondo <kde@david-redondo.de>

M  +8    -6    src/screencast.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/commit/ae7b46aebe67522a512b1dac91632bc78740bb6b