screencast: Always allow restoring full workspace

Long term we should move away from using the model that backs the UI
for restoration purposes.
BUG:519122
FIXED-IN:6.6.6


(cherry picked from commit daffa430ab241dc6287e001247ab42ad7ae11122)

Co-authored-by: David Redondo <kde@david-redondo.de>

(cherry picked from commit 71655df93ff92374955e40d0714492ff645ba6f2)

Co-authored-by: David Redondo <kde@david-redondo.de>